<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:padding="5dp">

    <TextView
        android:id="@+id/txt_transaction_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/transaction_delete"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/txt_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_transaction_delete"
        android:layout_centerHorizontal="true"
        android:text="@string/transaction"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_transaction"
        android:layout_centerHorizontal="true"
        android:padding="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete_confirm"
            android:text="@string/confirm"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/btn_delete_cancel"
            android:text="@string/cancel"
            android:layout_toEndOf="@+id/btn_delete_confirm"
            android:layout_marginStart="5dp"/>

    </RelativeLayout>



</RelativeLayout>