<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Top bar layout-->
    <RelativeLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_stats_open"
            android:src="@android:drawable/ic_dialog_info"
            android:background="?android:colorBackground"
            android:contentDescription="@string/statistics_page" />

        <TextView
            android:id="@+id/txt_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_stats_open"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:text="@string/goal"
            android:clickable="true"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_goal"
            app:trackThickness="10dp" />

    </RelativeLayout>

    <!--Layout containing buttons to add to database-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBarLayout"
        android:padding="10dp">

        <Spinner
            android:id="@+id/sp_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="Category"
            app:layout_constraintBottom_toTopOf="@id/et_description"
            app:layout_constraintEnd_toStartOf="@id/sp_monthSelector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/sp_monthSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/month"
            app:layout_constraintBottom_toBottomOf="@id/sp_category"
            app:layout_constraintEnd_toStartOf="@id/sp_yearSelector"
            app:layout_constraintStart_toEndOf="@id/sp_category"
            app:layout_constraintTop_toTopOf="@id/sp_category"/>

        <Spinner
            android:id="@+id/sp_yearSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/year"
            app:layout_constraintBottom_toBottomOf="@id/sp_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sp_monthSelector"
            app:layout_constraintTop_toTopOf="@id/sp_category"/>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/description"
            android:hint="@string/description"
            android:inputType="textCapSentences"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/et_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sp_category"/>

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            app:layout_constraintBottom_toBottomOf="@id/et_description"
            app:layout_constraintEnd_toStartOf="@id/btn_add"
            app:layout_constraintStart_toEndOf="@id/et_description"
            app:layout_constraintTop_toTopOf="@id/et_description"
            android:autofillHints="@string/amount"
            android:inputType="numberDecimal" />


        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="@id/et_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_amount"
            app:layout_constraintTop_toTopOf="@id/et_description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addLayout"
        android:id="@+id/headerLayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:layout_weight="50"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtOutcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outcome"
            android:layout_weight="50"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <!--List containing layout-->
    <LinearLayout
        android:id="@+id/ll_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerLayout"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_income"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="50" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_outcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="50"/>

    </LinearLayout>

</RelativeLayout>