<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="?android:colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stats_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            style="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/stats_title"
            android:gravity="center_vertical"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_stats_close"
            tools:ignore="RelativeOverlap"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:background="?android:colorBackground"
            android:contentDescription="@string/close_button" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stats_header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/stats_overall"
            android:orientation="vertical"
            android:layout_weight="100">

            <TextView
                android:id="@+id/txt_stats_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:layout_marginTop="5dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stats_overall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/stats_annual"
            android:orientation="vertical"
            android:layout_weight="100">

            <TextView
                android:id="@+id/txt_stats_annual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annual"
                android:layout_marginTop="5dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stats_annual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:orientation="vertical"
            android:id="@+id/stats_monthly">

            <TextView
                android:id="@+id/txt_stats_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly"
                android:layout_marginTop="5dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stats_monthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>